# pyis-uploader

./: CREDITS  Makefile.am  README.md  autogen.sh  config.py  configure.ac  gui.py  install.sh  isup.py  pyih-uploader.py  pyis-uploader.py  pyis_uploader.py  setup.py  test.py  utils.py
archlinux/: PKGBUILD
debian/: changelog  control  rules
docs/: Makefile.am  pyih-uploader.1  pyis-uploader.1
locale/: en.po  pt_BR.po  pyis-uploader.pot
locale/en/LC_MESSAGES/: en.po  pyih-uploader.mo  pyih-uploader.po  pyis-uploader.mo  pyis-uploader.po
locale/en_US/LC_MESSAGES/: pyis-uploader.mo  pyis-uploader.po
locale/es/LC_MESSAGES/: es.po  pyih-uploader.mo  pyih-uploader.po  pyis-uploader.po
locale/pt/LC_MESSAGES/: pyis-uploader.po
locale/pt_BR/LC_MESSAGES/: pt_BR.po  pyih-uploader.mo  pyih-uploader.po  pyis-uploader.mo  pyis-uploader.po
m4/: ChangeLog
man/: pyis-uploader.1
po/: ChangeLog  Makevars  POTFILES.in  en.po  pt_BR.po  pyis-uploader.pot
src/: Makefile.am  pyis-uploader  pyis-uploader.in
src/gui/: README.md  common.py  gtk.py  gtk.ui  main.py
src/pyis_uploader/: Makefile.am  isup.py  pyis_uploader.py  utils.py
